[package]
name = "arbi_game"
version = "0.1.0"
publish = false
authors = ["Tomasz Nehring <tomasz_nehring@outlook.com>"]
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
[features]
dev = ["bevy/dynamic"]

[profile.release]
lto = true
codegen-units = 1

[dependencies]
bevy = {version="0.9.1"}
embed-resource = "1.8.0"
